# jobTailor

./: .gitignore  README.md  codex-record.sh  package-lock.json  pyproject.toml  tailor_cv.py
.zed/: debug.json
assets/ui/: app.js  index.html  styles.css
outputs/4334677088/: www-linkedin-com-jobs-view-4334677088_cover_letter.md  www-linkedin-com-jobs-view-4334677088_cv.md
outputs/4342032265/: www-linkedin-com-jobs-collections-recommended-currentjobid-4342032265-discover-r_cover_letter.md
outputs/4348942395/: www-linkedin-com-jobs-view-4348942395_alignment.md  www-linkedin-com-jobs-view-4348942395_analysis.md  www-linkedin-com-jobs-view-4348942395_cover_letter.md  www-linkedin-com-jobs-view-4348942395_cv.md  www-linkedin-com-jobs-view-4348942395_linkedin_summary.md  www-linkedin-com-jobs-view-4348942395_profile_summary.md
src/job_tailor/: __init__.py  __main__.py  cli.py  core.py  ui_server.py
src/job_tailor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
