[project]
name = "job-tailor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "fpdf2>=2.7.8",
  "pypdf>=4.3.1",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
